cabal-version:       2.4
name:                pickle
version:             1.1.0.0
synopsis:            Instant StatsD in Haskell
description:         Instant StatsD in Haskell. Easy to implement in a program you've already written without any refactoring to pass any sockets/configuration around.
bug-reports:         https://github.com/Luabee/pickle/issues
license:             MIT
license-file:        LICENSE
author:              Bob Blackmon
maintainer:          bob.blackmon@ymail.com
copyright:           Copyright 2019 Anduril Industries

extra-source-files:  CHANGELOG.md, README.md

library
  -- Modules exported by the library.
  exposed-modules: Data.Pickle, Data.Pickle.MetricData

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:        base ^>=4.18.0.0
                      , containers
                      , network
                      , stm
                      , text
                      , time
                      , scientific

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    GHC2021
  ghc-options: -Wall
